--- a/practice-03/styles/components/card.css
+++ b/practice-03/styles/components/card.css
@@ -2,6 +2,10 @@
   border-radius: 12px;
   border: none;
   padding: 0 1.5rem;
+
+  cursor: pointer;
+  border: none;
+  border-radius: unset;
 }
 
 .card-header,
@@ -12,11 +16,11 @@
   border: none;
 }
 
-.card:active .card-body .card-text {
+.card-body:hover .card-text {
   color: var(--alienated);
 }
 
-.card-body:hover .card-text {
+.card:hover .card-header {
   color: var(--crab-nebula);
 }
 
@@ -28,33 +32,18 @@
 
   padding: 1rem 0;
 }
+
 .card .btn:hover {
   background-color: var(--alienated);
   color: var(--bs-white);
   border: none;
 }
 
-/* menu__list */
-.card {
-  cursor: pointer;
-  border: none;
-  border-radius: unset;
-}
-
-
-.card:hover .card-header {
-  color: var(--crab-nebula);
-}
-
-.card:active .card-body .card-text {
-  color: var(--alienated);
-}
-
-.card-body:hover .card-text {
-  color: var(--crab-nebula);
-}
-
 /* card-img */
+.card-img .card-header {
+  padding-bottom: 0.875rem;
+}
+/* hr */
 .card-img .card-header::after {
   content: "";
   height: 1px;
@@ -64,16 +53,6 @@
 
   position: absolute;
   background-color: var(--west_chester-grey);
-}
-
-.card-img,
-.card-header,
-.card-body {
-  margin-bottom: 1rem;
-}
-
-.card-img .card-header {
-  padding-bottom: 0.875rem;
 }
 
 .card-img-top {
