REFACTOR: Refactor format accordion

--- a/practice-03/styles/base/typography.css
+++ b/practice-03/styles/base/typography.css
@@ -55,6 +55,9 @@
   font-size: var(--font-size-base);
   line-height: var(--line-height-small);
 }
+.fs-1 {
+  font-weight: var(--font-weight-bold);
+}
 
 /* -----Responsive------ */
 /* tablet */
