--- a/practice-03/styles/components/card.css
+++ b/practice-03/styles/components/card.css
@@ -24,7 +24,7 @@
 /* card .button */
 .card .btn {
   border: 1px solid var(--gray-300);
-  border-radius: 8px;
+  border-radius: 0.5rem;
 
   padding: 1rem 0;
 }
