--- a/practice-03/styles/layout/footer.css
+++ b/practice-03/styles/layout/footer.css
@@ -33,7 +33,7 @@
   width: 12.375rem;
   height: 4rem;
   background: var(--bs-white);
-  filter: drop-shadow(0px 1.5rem 2rem rgba(0, 0, 0, 0.1));
+  filter: drop-shadow(0rem 1.5rem 2rem rgba(0, 0, 0, 0.1));
 }
 
 
