--- a/practice-03/styles/components/accordion.css
+++ b/practice-03/styles/components/accordion.css
@@ -25,6 +25,6 @@
 
 .accordion-button:after,
 .accordion-button:not(.collapsed)::after {
-  background-image: url(../../imgx/plus-lg.svg);
+  background-image: url(../../imgs/plus-lg.svg);
   margin-left: 1rem;
 }
