--- a/practice-03/styles/components/card.css
+++ b/practice-03/styles/components/card.css
@@ -23,7 +23,7 @@
 
 /* card .button */
 .card .btn {
-  border: 1px solid var(--gray-300);
+  border: 0.0625rem solid var(--gray-300);
   border-radius: 0.5rem;
 
   padding: 1rem 0;
@@ -42,7 +42,7 @@
 /* hr */
 .card-img .card-header::after {
   content: "";
-  height: 1px;
+  height: 0.0625rem;
   width: 100%;
   bottom: 0;
   left: 0;
