--- a/practice-03/styles/index.css
+++ b/practice-03/styles/index.css
@@ -1,5 +1,5 @@
 /* abstracts */
-@import "./abstracts/variable.css";
+@import "./abstracts/variables.css";
 
 /* base */
 @import "./base/reset.css";
