--- a/practice-03/styles/abstracts/variables.css
+++ b/practice-03/styles/abstracts/variables.css
@@ -6,13 +6,11 @@
 
   /* -------------color-------------------- */
   /* https://colornamer.robertcooper.me/  */
-  --lighthouse: #f4f4f4;
-  --gainsboro: #dcdcdc;
-  --west_chester-grey: #787878;
-  --lucky-grey: #777777;
-  --bauhaus: #404040;
-  --crab-nebula: #004050;
-  --alienated: #00cc61;
+  --primary: #00cc61;
+  --secondary: #004050;
+  --light: #f4f4f4;
+  --gray-500: #777777;
+  --gray-300: #dcdcdc;
 
   /* -------------font-weight-------------- */
 
