--- a/practice-03/styles/components/accordion.css
+++ b/practice-03/styles/components/accordion.css
@@ -12,7 +12,7 @@
 .accordion-flush .accordion-item:first-child,
 .accordion-flush .accordion-item {
   border: unset;
-  border-top: 1px solid var(--bs-accordion-border-color);
+  border-top: 0.0625rem solid var(--bs-accordion-border-color);
 }
 
 .accordion-button,
@@ -25,6 +25,6 @@
 
 .accordion-button:after,
 .accordion-button:not(.collapsed)::after {
-  background-image: url(../../img/plus-lg.svg);
+  background-image: url(../../images/plus-lg.svg);
   margin-left: 1rem;
 }
