--- a/practice-03/styles/components/button.css
+++ b/practice-03/styles/components/button.css
@@ -7,20 +7,20 @@
 
 .btn-primary {
   background: var(--bs-white);
-  border: 1px solid var(--bs-white);
-  border-radius: 4px;
+  border: 0.0625rem solid var(--bs-white);
+  border-radius: 0.25rem;
   color: var(--black);
 }
 
 .btn-primary:hover {
   color: var(--bs-black);
   background-color: transparent;
-  border: 1px solid var(--crab-nebula);
+  border: 0.0625rem solid var(--secondary);
 }
 
 .btn-secondary {
-  background: var(--crab-nebula);
-  border-radius: 4px;
+  background: var(--secondary);
+  border-radius: 0.25rem;
 }
 
 
@@ -31,11 +31,11 @@
 }
 
 .cta-button .btn-primary:active {
-  transform: translateY(5px);
-  background-color: var(--crab-nebula);
+  transform: translateY(0.3125rem);
+  background-color: var(--secondary);
   border: none;
 }
 
 .cta-button .text-white:hover {
-  text-decoration: underline var(--crab-nebula);
+  text-decoration: underline var(--secondary);
 }
